data/derived/fa15/progs/unify/prog3132.ml.out
Characters 81-83:
  | Sine expr -> sin(pi* eval (expr, x, y))
                     ^^
Error: This expression has type float but an expression was expected of type
         int
